Bugfix on dbcontext

--- a/yedihisse.API/appsettings.json
+++ b/yedihisse.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=yedihissedb;Username=postgres;Password=dsa13542010"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
