--- a/yedihisse.Business/yedihisse.Business.csproj
+++ b/yedihisse.Business/yedihisse.Business.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\yedihisse.DataAccess\yedihisse.DataAccess.csproj" />
+    <ProjectReference Include="..\yedihisse.Entities\yedihisse.Entities.csproj" />
+    <ProjectReference Include="..\yedihisse.Shared\yedihisse.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
