--- a/yedihisse.API/appsettings.json
+++ b/yedihisse.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "JwtTokenSecurityKey": "3-5s5p@nAtTJ!%%L"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=yedihissedb;Username=postgres;Password=dsa13542010"
   },
