--- a/yedihisse.API/appsettings.json
+++ b/yedihisse.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "3-5s5p@nAtTJ!%%L",
+    "Issuer": "https://localhost:44334/",
+    "Audience": "https://localhost:44334/"
+  }
 }
